--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,15 +1,47 @@
+// pipeline {
+//     agent any
+//     options {
+//         skipStagesAfterUnstable()
+//     }
+//     stages {
+//         stage('Build') {
+//             steps {
+//                 sh 'mvn -B -DskipTests clean package'
+//             }
+//         }
+//         stage('Test') {
+//             steps {
+//                 sh 'mvn test'
+//             }
+//             post {
+//                 always {
+//                     junit 'target/surefire-reports/*.xml'
+//                 }
+//             }
+//         }
+//         stage('Deliver') { 
+//             steps {
+//                 sh './jenkins/scripts/deliver.sh' 
+//             }
+//         }
+//     }
+// }
+
+
+
 pipeline {
-    agent any
     options {
         skipStagesAfterUnstable()
     }
     stages {
         stage('Build') {
+            agent { label 'slave1' }
             steps {
                 sh 'mvn -B -DskipTests clean package'
             }
         }
         stage('Test') {
+            agent { label 'slave1' }
             steps {
                 sh 'mvn test'
             }
@@ -19,9 +51,10 @@ pipeline {
                 }
             }
         }
-        stage('Deliver') { 
+        stage('Deliver') {
+            agent { label 'slave2' } // Docker runs on slave2
             steps {
-                sh './jenkins/scripts/deliver.sh' 
+                sh './jenkins/scripts/deliver.sh'
             }
         }
     }
